tests/snapshots/wallets/restore/bad_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - restore
    - wallet
    - "1234"
    - foo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Invalid value for: body (Cannot validate mnemonic: foo at index 28: decoding failure)
