tests/snapshots/wallets/restore/two_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - restore
    - wallet
    - "1234"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <MNEMONIC>

Usage: kermit wallets restore <WALLET_NAME> <PASSWORD> <MNEMONIC>

For more information, try '--help'.
